add swagger ui, add auth, describe posts endpoints
