# src/routers/posts.js
@@ -1,12 +1,14 @@
 const express = require('express');
 const router = express.Router();
-const handler = require('../handlers/posts');
-const { POSTS_FILE_PATH, COMMENTS_FILE_PATH } = require('../constants.js');
+const handler = require('../helpers/storageObjectsHandler');
+const { POSTS_FILE_PATH, COMMENTS_FILE_PATH, AUTH_COOKIE_NAME } = require('../constants.js');
 const IdFieldName = 'id';
 
 router.use(function timeLog(req, res, next) {
-    console.log('Time: ', Date.now())
-    next()
+    if (req.cookies[AUTH_COOKIE_NAME]) {
+        next();
+    }
+    res.status(403).send('Forbidden');
 });
 
 router
@@ -15,7 +17,6 @@ router
         res.send(handler.getAllElements(POSTS_FILE_PATH));
     })
     .post(function (req, res) {
-        //check body value
         handler.addElementToCollection(POSTS_FILE_PATH, req.body);
         res.send('Posted');
     });
@@ -23,29 +24,28 @@ router
 router
     .route('/:id')
     .get(function (req, res) {
-        //check params value in 0
-        res.send(handler.getElementFromCollection(POSTS_FILE_PATH, IdFieldName, req.params[0]));
+        res.send(handler.getElementFromCollection(POSTS_FILE_PATH, IdFieldName, req.params.id));
     })
     .put(function (req, res) {
-        handler.updateElementToCollection(POSTS_FILE_PATH, IdFieldName, req.params[0], req.body);
+        handler.updateElementInCollection(POSTS_FILE_PATH, IdFieldName, req.params.id, req.body);
         res.send('Updated');
     })
     .delete(function (req, res) {
-        handler.updateElementToCollection(POSTS_FILE_PATH, IdFieldName, req.params[0]);
+        handler.deleteElementFromCollection(POSTS_FILE_PATH, IdFieldName, req.params.id);
         res.send('Removed');
     });
 
 router
     .route('/:id/comments')
     .get(function (req, res) {
-        res.send(handler.getAllElements(COMMENTS_FILE_PATH));
+        res.send(handler.getElementFromCollection(COMMENTS_FILE_PATH, IdFieldName, req.params.id));
     })
-    .put(function (req, res) {
-        handler.updateElementToCollection(COMMENTS_FILE_PATH, IdFieldName, req.params[0], req.body);
-        res.send('Updated');
+    .post(function (req, res) {
+        handler.addElementToCollection(COMMENTS_FILE_PATH, req.body, 'comments', IdFieldName, req.params.id);
+        res.send('Posted');
     })
     .delete(function (req, res) {
-        handler.updateElementToCollection(COMMENTS_FILE_PATH, IdFieldName, req.params[0]);
+        handler.deleteElementFromCollection(COMMENTS_FILE_PATH, IdFieldName, req.params.id);
         res.send('Removed');
     });
 
