# src/routers/user.js
@@ -1,25 +1,24 @@
 var express = require('express');
 var router = express.Router();
+const { AUTH_COOKIE_NAME } = require('../constants.js');
 
 router.use(function timeLog(req, res, next) {
-    console.log('Time: ', Date.now())
-    next()
+    if (req.cookies[AUTH_COOKIE_NAME]) {
+        next();
+    }
+    res.status(403).send('Forbidden');
 });
 
 router
     .route('/:username')
     .get(function (req, res) {
-        res.send('')
+        res.send('Not implemented yet')
     })
     .put(function (req, res) {
-        res.send('')
+        res.send('Not implemented yet')
     })
     .delete(function (req, res) {
-        res.send('')
+        res.send('Not implemented yet')
     });
-
-router
-    .get('/login', (req, res) => res.send(''))
-    .get('/logout', (req, res) => res.send(''));
 
 module.exports = router;
